--- a/preProcessing.ipynb
+++ b/preProcessing.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from PIL import ImageEnhance,Image\n",
+    "from PIL import Image #python image lbraray\n",
     "\n",
     "ORIGIN_PATH = r\"/Users/maithilipawde/Desktop/ChestCancerDetection/dataset/normal\"\n",
     "DESTIN_PATH = r\"/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/normal\"\n",
@@ -32,7 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import ImageEnhance,Image\n",
+    "\n",
+    "ORIGIN_PATH = r\"/Users/maithilipawde/Desktop/ChestCancerDetection/dataset/adenocarcinoma\"\n",
+    "DESTIN_PATH = r\"/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/adenocarcinoma\"\n",
+    "\n",
+    "# Create destination directory if it doesn't exist\n",
+    "if not os.path.exists(DESTIN_PATH):\n",
+    "    os.makedirs(DESTIN_PATH)\n",
+    "\n",
+    "# Loop through all files in the origin directory\n",
+    "for filename in os.listdir(ORIGIN_PATH):\n",
+    "    # Construct full paths for the original and destination images\n",
+    "    origin_image_path = os.path.join(ORIGIN_PATH, filename)\n",
+    "    destin_image_path = os.path.join(DESTIN_PATH, filename)\n",
+    "    \n",
+    "    # Open the image file\n",
+    "    with Image.open(origin_image_path) as img:\n",
+    "        # Resize the image\n",
+    "        out = img.resize((300, 300))\n",
+    "        # Save the converted image to the destination directory\n",
+    "        out.save(destin_image_path, format=\"PNG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +82,14 @@
     "import numpy as np\n",
     "\n",
     "# Define the directory containing your dataset\n",
-    "dataset_dir = r'C:\\Users\\diwas\\Desktop\\deeplearningProject\\preprocessed_dataset\\normal'\n",
+    "dataset_dir = r'/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/normal'\n",
     "\n",
     "# Define the directory where augmented images will be saved\n",
-    "augmented_dir = r'C:\\Users\\diwas\\Desktop\\deeplearningProject\\preprocessed_dataset\\augmented_normal'\n",
+    "augmented_dir = r'/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/augmented_normal'\n",
     "\n",
     "# Create the ImageDataGenerator for augmentation\n",
     "datagen = ImageDataGenerator(\n",
-    "    rotation_range=40,\n",
+    "    rotation_range=30,\n",
     "                horizontal_flip=True,\n",
     "                width_shift_range=0.2,\n",
     "                height_shift_range=0.2,\n",
@@ -82,13 +112,13 @@
     "    i = 0\n",
     "    for batch in datagen.flow(x, batch_size=1, save_to_dir=augmented_dir, save_prefix='augmented_' + filename[:-4], save_format='jpg'):\n",
     "        i += 1\n",
-    "        if i > 4:  # Number of augmented images per original image\n",
+    "        if i > 5:  # Number of augmented images per original image\n",
     "            break  # Break the loop to avoid infinite loop\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,10 +128,10 @@
     "import numpy as np\n",
     "\n",
     "# Define the directory containing your dataset\n",
-    "dataset_dir = r'C:\\Users\\diwas\\Desktop\\deeplearningProject\\preprocessed_dataset\\'\n",
+    "dataset_dir = r'/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/adenocarcinoma'\n",
     "\n",
     "# Define the directory where augmented images will be saved\n",
-    "augmented_dir = r'C:\\Users\\diwas\\Desktop\\deeplearningProject\\preprocessed_dataset\\augmented_adenocarcinoma'\n",
+    "augmented_dir = r'/Users/maithilipawde/Desktop/ChestCancerDetection/preprocessed_dataset/augmented_adinocarcinoma'\n",
     "\n",
     "# Create the ImageDataGenerator for augmentation\n",
     "datagen = ImageDataGenerator(\n",
@@ -149,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
